--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,4 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-gupshup = 'gupshup.main:main'
+gupshup = 'gupshup.__init__:main'
