--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-textual = "^0.1.15"
+textual = "0.1.15"
 
 [tool.poetry.dev-dependencies]
 
