--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install flake8
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        flake8 $(git ls-files '*.py')
