--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.10"
 textual = "0.1.15"
 
 [tool.poetry.dev-dependencies]
+pre-commit = "^2.17.0"
+black = "^22.1.0"
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
