--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.10"
 textual = "0.1.15"
+playsound = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
