--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ license = "MIT"
 python = "^3.10"
 textual = "0.1.15"
 playsound = "^1.3.0"
-textual_extras = { git = "https://github.com/kraanzu/textual_extras.git", branch = "main" }
+textual_extras = { git = "https://github.com/kraanzu/textual_extras.git", branch = "main" } #better widgets
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
