--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 textual = "0.1.15"
 playsound = "^1.3.0"
 textual_extras = { git = "https://github.com/kraanzu/textual_extras.git", branch = "main" } #better widgets
+pyperclip = "^1.8.2"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
